--- a/WebContent/crm/searchData_view.html
+++ b/WebContent/crm/searchData_view.html
@@ -572,7 +572,7 @@
                 <div class="form-group col-lg-2 pull-right" style="padding-top: 25px;">
                     <button type="button" onclick="resetSerachParam(2)" style="border-color:#00a65a;background-color:#00a652" class="btn btn-block btn-primary">重置</button>
                 </div>
-                <div class="col-lg-2 pull-right" style="padding-top: 25px;z-index: 1000;position: relative">
+                <div class="col-lg-2 pull-right" style="padding-top: 25px;z-index: 1000;position: relative" id="export1">
                     <div id="exportnormal" >
                         <button type="button" id="export_manual_massOrder_button" class="btn btn-block btn-warning dialog_open">导出</button>
                         <span id="forcolumnattention1" style="color:#47b8ef;font-size: 14px;white-space: nowrap;position: absolute;top:1px;z-index: 1000;display:none;left:17px">点击查询后导出！</span>
@@ -580,10 +580,17 @@
                     <div id="div" style="z-index:10000;position: absolute;top: 25px;display: block"></div>
 
                 </div>
-
-                <div class="col-lg-2 pull-right" style="padding-top: 25px;display:none" id="exportall">
-                    <button type="button" id="export_manual_massOrder_button" onclick="export_manual_massOrder('all')" class="btn btn-block btn-warning">完整数据导出</button>
+                <div class="col-lg-2 pull-right" style="padding-top: 25px;z-index: 1000;position: relative" id="export2">
+                    <div id="exportall">
+                        <button type="button" id="export_manual_massOrder_button" style="display:block" class="btn btn-block btn-warning dialog_open export">完整数据导出</button>
+                        <span id="forcolumnattention2" style="color:#47b8ef;font-size: 14px;white-space: nowrap;position: absolute;top:1px;z-index: 1000;display:none;left:17px">点击查询后导出！</span>
+                    </div>
+                    <div id="div1" style="z-index:10000;position: absolute;top: 25px;display: block"></div>
                 </div>
+
+                <!--<div class="col-lg-2 pull-right" style="padding-top: 25px;display:none" id="exportall">-->
+                    <!--<button type="button" id="export_manual_massOrder_button" onclick="export_manual_massOrder('all')" class="btn btn-block btn-warning">完整数据导出</button>-->
+                <!--</div>-->
                 <div class="form-group col-lg-2 pull-right" style="padding-top: 25px;">
                     <button type="button" id="search_manual_massOrder_button" onclick="search_manual_abnormalOrder(1)" class="btn btn-block btn-primary">查询</button>
                 </div>
@@ -720,11 +727,15 @@ Date.prototype.format=function(fmt) {
       var height = export_button.clientHeight;
       var width = export_button.clientWidth;
       var div = document.getElementById("div");
+      var div1 = document.getElementById("div1");
       $("#div").css("height",height+"px");
       $("#div").css("width",width+"px");
+      $("#div1").css("height",height+"px");
+      $("#div1").css("width",width+"px");
       $(".btn-warning").css("background-color","#666");
       $(".btn-warning").css("border-color","#666");
       document.getElementById("export_manual_massOrder_button").setAttribute("disabled", true);
+      $(".export").attr("disabled", true);
     $(".logo-lg > ul > li").mouseenter(function(){
       $(this).children(".nav_dropdown").show();
     });
@@ -754,6 +765,13 @@ Date.prototype.format=function(fmt) {
     	exportnormal.style.display = "none";
     	var exportall = document.getElementById("exportall");
     	exportall.style.display = "block";
+        var export1 = document.getElementById("export1");
+        export1.style.display = "none";
+    }else{
+        var exportall = document.getElementById("exportall");
+        exportall.style.display = "none";
+        var export2 = document.getElementById("export2");
+        export2.style.display = "none";
     }
   	
     var regex_yw = new RegExp("^(YW|yw)\w*");//业务（事业部）
@@ -1499,18 +1517,26 @@ Date.prototype.format=function(fmt) {
            var height = export_button.clientHeight;
            var width = export_button.clientWidth;
            var div = document.getElementById("div");
+           var div1 = document.getElementById("div1");
            div.style.display = "block";
+           div1.style.display = "block";
            $("#div").css("height",height+"px");
            $("#div").css("width",width+"px");
+           $("#div1").css("height",height+"px");
+           $("#div1").css("width",width+"px");
            $(".btn-warning").css("background-color","#666");
            $(".btn-warning").css("border-color","#666");
            document.getElementById("export_manual_massOrder_button").setAttribute("disabled", true);
+           $(".export").attr("disabled", true);
        }else{
            var div = document.getElementById("div");
+           var div1 = document.getElementById("div1");
            div.style.display = "none";
+           div1.style.display = "none";
            $(".btn-warning").css("background-color","#f39c12");
            $(".btn-warning").css("border-color","#e08e0b");
            $('#export_manual_massOrder_button').removeAttr("disabled");
+           $(".export").removeAttr("disabled");
        }
 
    }
@@ -2586,6 +2612,12 @@ $("#div").on("mouseover",function(event){
 });
 $("#div").on("mouseout",function(event){
     $("#forcolumnattention1").hide();
+});
+$("#div1").on("mouseover",function(event){
+    $("#forcolumnattention2").show();
+});
+$("#div1").on("mouseout",function(event){
+    $("#forcolumnattention2").hide();
 });
 
 //打开按钮"模态框"
