--- a/WebContent/crm/searchData_view.html
+++ b/WebContent/crm/searchData_view.html
@@ -572,15 +572,17 @@
                 <div class="form-group col-lg-2 pull-right" style="padding-top: 25px;">
                     <button type="button" onclick="resetSerachParam(2)" style="border-color:#00a65a;background-color:#00a652" class="btn btn-block btn-primary">重置</button>
                 </div>
-                <div class="col-lg-2 pull-right" style="padding-top: 25px;z-index: 1000;position: relative" id="export1">
+                <input type="hidden" id="exportType">
+                <div class="col-lg-2 pull-right" style="display:block;padding-top: 25px;z-index: 1000;position: relative" id="export1">
                     <div id="exportnormal" >
-                        <button type="button" id="export_manual_massOrder_button" class="btn btn-block btn-warning dialog_open">导出</button>
+                        <button type="button" id="export_manual_massOrder_button" class="btn btn-block btn-warning dialog_open export_">导出</button>
+
                         <span id="forcolumnattention1" style="color:#47b8ef;font-size: 14px;white-space: nowrap;position: absolute;top:1px;z-index: 1000;display:none;left:17px">点击查询后导出！</span>
                     </div>
                     <div id="div" style="z-index:10000;position: absolute;top: 25px;display: block"></div>
 
                 </div>
-                <div class="col-lg-2 pull-right" style="padding-top: 25px;z-index: 1000;position: relative" id="export2">
+                <div class="col-lg-2 pull-right" style="display:none;padding-top: 25px;z-index: 1000;position: relative" id="export2">
                     <div id="exportall">
                         <button type="button" id="export_manual_massOrder_button" style="display:block" class="btn btn-block btn-warning dialog_open export">完整数据导出</button>
                         <span id="forcolumnattention2" style="color:#47b8ef;font-size: 14px;white-space: nowrap;position: absolute;top:1px;z-index: 1000;display:none;left:17px">点击查询后导出！</span>
@@ -721,8 +723,32 @@ Date.prototype.format=function(fmt) {
 	var redirectTag = decode64(getUrlParamByKey("rt"));//分析图标识
 	//从门店GMV、国安侠GMV 跳转过来（Editor:gaobaolei）
 	var tag = decode64(getUrlParamByKey("tag"));//订单标签
-	
+
+function getIsManager(){
+    var isManager = currentUser.usergroup.code;
+    if(isManager=="GLY"){
+        var exportnormal = document.getElementById("exportnormal");
+        exportnormal.style.display = "none";
+        var exportall = document.getElementById("exportall");
+        exportall.style.display = "block";
+        var export1 = document.getElementById("export1");
+        export1.style.display = "none";
+        var export2 = document.getElementById("export2");
+        export2.style.display = "block";
+    }else{
+        var exportall = document.getElementById("exportall");
+        exportall.style.display = "none";
+        var export2 = document.getElementById("export2");
+        export2.style.display = "none";
+        var export1 = document.getElementById("export1");
+        export1.style.display = "block";
+    }
+
+}
+
   $(function () {
+      initcurruser();//初始化登录人信息
+      getIsManager();
       var export_button = document.getElementById("export_manual_massOrder_button");
       var height = export_button.clientHeight;
       var width = export_button.clientWidth;
@@ -742,7 +768,14 @@ Date.prototype.format=function(fmt) {
     $(".logo-lg > ul > li").mouseleave(function(){
       $(this).children(".nav_dropdown").hide();
     });
-    $('#auto_date').daterangepicker({
+      $(".export").click(function(){
+          $("#exportType").val("all");
+      });
+      $(".export_").click(function(){
+          $("#exportType").val("normal");
+      });
+
+      $('#auto_date').daterangepicker({
     	minDate:new Date(2017, 12),
         maxDate:new Date()
     });
@@ -757,23 +790,7 @@ Date.prototype.format=function(fmt) {
     document.getElementById("ordersn_manual").onkeyup =function() {
         this.value =this.value.replace(/\s/g,'').replace(/\D/g,'').replace(/(\d{4})(?=\d)/g,"$1 ");;
   	};
-    
-  	initcurruser();//初始化登录人信息 
-    var isManager = currentUser.usergroup.code;
-    if(isManager=="GLY"){
-    	var exportnormal = document.getElementById("exportnormal");
-    	exportnormal.style.display = "none";
-    	var exportall = document.getElementById("exportall");
-    	exportall.style.display = "block";
-        var export1 = document.getElementById("export1");
-        export1.style.display = "none";
-    }else{
-        var exportall = document.getElementById("exportall");
-        exportall.style.display = "none";
-        var export2 = document.getElementById("export2");
-        export2.style.display = "none";
-    }
-  	
+
     var regex_yw = new RegExp("^(YW|yw)\w*");//业务（事业部）
     if(target==0){//总部
     	initallcity(); 
@@ -2119,6 +2136,7 @@ function showfee(obj){
   
   //导出
   function export_manual_massOrder(hiddenvalue){
+      var hiddenvalue = $("#exportType").val();
       var filename = $("#userName").val();
       if(filename == "" || filename == null){
           crm_alert(0,"名称不能为空！");
