文件格式改为csv

--- a/WebContent/crm/filedown_list.html
+++ b/WebContent/crm/filedown_list.html
@@ -224,7 +224,7 @@
                         } else {
                             file_downTime = " — ";
                         }
-                        var file_filename = dataresult[i].filename+".xlsx";
+                        var file_filename = dataresult[i].filename+".csv";
                         var file_createTime = formmatDate(dataresult[i].create_time);
                         var file_status = dataresult[i].mark1;
                         var file_id = dataresult[i].id;
