屏蔽当月可选操作

--- a/WebContent/crm/dynamicData_gax_analysis.html
+++ b/WebContent/crm/dynamicData_gax_analysis.html
@@ -313,7 +313,7 @@
         btns: ['confirm'],
         theme: '#11214e',
         min: '2018-10-1',
-        max:use_month,
+        max:max_month,
 
     });
     var cityId = decode64(getUrlParamByKey("c"));//城市ID
