商品销售档案，订单档案下载中心新的显示样式

--- a/WebContent/crm/searchDataItem_view.html
+++ b/WebContent/crm/searchDataItem_view.html
@@ -352,7 +352,7 @@
     <div id="dialog" class="dialog_position_center">
         <!--头部分-->
         <header>
-            <span>添加下载任务</span><span class="dialog_close" style="font-size: 32px;">&times;</span>
+            <span>添加下载任务</span><span class="dialog_remove" style="font-size: 32px;">&times;</span>
         </header>
         <!--内容部分-->
         <div class="content1">
