商品销售档案，订单档案csv文本格式修改，下载完成后提示框修改

--- a/WebContent/crm/searchDataItem_view.html
+++ b/WebContent/crm/searchDataItem_view.html
@@ -1804,7 +1804,7 @@ function getIsManager() {
 		         $("#process_div").hide();
 		    	 $("#process_div_pic").hide();
 		     });
-      crm_alert(0,"请去下载中心下载导出文件！");
+      crm_alert(0,"文件生成任务添加成功，请到下载中心查看。");
 	  }
 
 //下载列表
