--- a/WebContent/crm/searchData_view.html
+++ b/WebContent/crm/searchData_view.html
@@ -2286,7 +2286,7 @@ function showfee(obj){
 		         $("#process_div").hide();
 		    	 $("#process_div_pic").hide();
 		     });
-      crm_alert(0,"请去下载中心下载导出文件！");
+      crm_alert(0,"文件生成任务添加成功，请到下载中心查看。");
 	  }
 
 //下载列表
