添加ZBYYZLKZJSZ角色导出用户信息权限

--- a/WebContent/crm/memberData_list.html
+++ b/WebContent/crm/memberData_list.html
@@ -376,7 +376,7 @@
 
         initcurruser();//初始化登录人信息
         var isManager = currentUser.usergroup.code;
-        if(isManager=="GLY"){
+        if(isManager=="GLY" || isManager=="ZBYYZLKZJSZ"){
             var exportnormal = document.getElementById("exportnormal");
             exportnormal.style.display = "none";
             var exportall = document.getElementById("exportall");
