--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -488,8 +488,8 @@
           <div class="box-header h4 text-right" style="margin-bottom: -5px; margin-top:0;font-size: 12px;cursor: pointer;color: #747474" id="customer_analysis_more">更多</div>
           <div class="box-body no-padding">
             <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin">
-              <h4 class="gaugetb5">昨日毛利</h4>
-              <div class="col-sm-8 no-padding gaugetb5" id="tradesumofyesprofit"></div>
+              <h4 class="gaugetb4">昨日毛利</h4>
+              <div class="col-sm-8 no-padding gaugetb4" id="tradesumofyesprofit"></div>
             </div>
             <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin">
               <h4 class="gaugetb2">当月新增社员</h4>
@@ -497,10 +497,10 @@
               <div class="col-sm-4 no-padding gaugetb2" id="openCardUserMonthcount"></div>
             </div>
             <div class="info_bottom_dl info_bottom_left pull-right col-sm-4 no-margin" style="display: none;">
-              <h4 class="gaugetb4">当月成交单量</h4>
+              <h4 class="gaugetb5">当月成交单量</h4>
 			  <input type="hidden" id="tradesumofmonthOrderHid">
               <input type="hidden" id="tradesumoflastmonthOrderHid">
-              <div class="col-sm-4 no-padding gaugetb4" id="tradesumofmonthOrder"></div>
+              <div class="col-sm-4 no-padding gaugetb5" id="tradesumofmonthOrder"></div>
               <!-- <div class="col-sm-2 increase" id="sing_id4"><i class="fa fa-long-arrow-up" id="sign_4"></i></div>
               <div class="col-sm-5 no-padding text-center"><p class="increase" id="order_count_ratio"></p>环比</div> -->
             </div>
@@ -512,9 +512,10 @@
               <!-- <div class="col-sm-2 increase" id="sing_id"><i class="fa fa-long-arrow-up" id="sign_1"></i></div>
               <div class="col-sm-5 no-padding text-center"><p class="increase" id="customer_month_ratio"></p>环比</div> -->
             </div>
-            <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin">
-              <h4 class="gaugetb5">当月毛利</h4>
-              <div class="col-sm-8 no-padding gaugetb5" id="tradesumofcurmonthsprofit"></div>
+            <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin" onmouseover="showTooltip4();" onmouseout="hideTooltip4();">
+              <h4 class="gaugetb4">当月毛利</h4>
+              <font id="attention4" style="color:#FFFFFF;font-size: 12px;white-space: nowrap;position: absolute;top:-18px;z-index: 1000;display:none;left:-20px">销售收入-已退货-营销费用-报损-盘亏</font>	
+              <div class="col-sm-8 no-padding gaugetb4" id="tradesumofcurmonthsprofit"></div>
             </div>
             <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin">
             <h4 class="gaugetb2">历史累计社员</h4>
@@ -522,10 +523,10 @@
               <div class="col-sm-4 no-padding gaugetb2" id="openCardUserHistorycount"></div>
             </div>
             <div class="info_bottom_dl info_bottom_left pull-right col-sm-4 no-margin" style="display: none;">
-              <h4 class="gaugetb4">历史累计成交单量</h4>
+              <h4 class="gaugetb5">历史累计成交单量</h4>
 			  <input type="hidden" id="tradesumofhistoryOrderHid">
 			  <input type="hidden" id="tradesumOrderofyearHid">
-              <div class="col-sm-4 no-padding gaugetb4" id="tradesumofhistoryOrder"></div>
+              <div class="col-sm-4 no-padding gaugetb5" id="tradesumofhistoryOrder"></div>
             </div>
             <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin">
               <h4 class="gaugetb3">历史累计消费用户</h4>
