--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -514,7 +514,7 @@
             </div>
             <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin" onmouseover="showTooltip4();" onmouseout="hideTooltip4();">
               <h4 class="gaugetb4">当月毛利</h4>
-              <font id="attention4" style="color:#FFFFFF;font-size: 12px;white-space: nowrap;position: absolute;top:-18px;z-index: 1000;display:none;left:-20px">销售收入-已退货-营销费用-报损-盘亏</font>	
+              <font id="attention4" style="color:#FFFFFF;font-size: 12px;position: absolute;top:-35px;z-index: 1000;display:none;">销售收入-已退货-营销费用-报损-盘亏</font>	
               <div class="col-sm-8 no-padding gaugetb4" id="tradesumofcurmonthsprofit"></div>
             </div>
             <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin">
