毛利备注修改样式

--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -489,7 +489,7 @@
           <div class="box-body no-padding">
             <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin" onmouseover="showTooltip5();" onmouseout="hideTooltip5();">
               <h4 class="gaugetb4">昨日毛利</h4>
-              <font id="attention5" style="color:#FFFFFF;font-size: 12px;position: absolute;top:-20px;z-index: 1000;display:none;">销售收入-营销</font>	
+              <font id="attention5" style="color:#FFFFFF;font-size: 12px;position: absolute;top:-20px;z-index: 1000;display:none;left:10px">销售收入-营销</font>	
               <div class="col-sm-8 no-padding gaugetb4" id="tradesumofyesprofit"></div>
             </div>
             <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin">
@@ -515,7 +515,7 @@
             </div>
             <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin" onmouseover="showTooltip4();" onmouseout="hideTooltip4();">
               <h4 class="gaugetb4">当月毛利</h4>
-              <font id="attention4" style="color:#FFFFFF;font-size: 12px;position: absolute;top:-20px;z-index: 1000;display:none;">销售收入-营销-损耗</font>	
+              <font id="attention4" style="color:#FFFFFF;font-size: 12px;position: absolute;top:-20px;z-index: 1000;display:none;left:10px">销售收入-营销-损耗</font>	
               <div class="col-sm-8 no-padding gaugetb4" id="tradesumofcurmonthsprofit"></div>
             </div>
             <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin">
