暂时隐去小区消费人数

--- a/WebContent/crm/dynamicData_tinyvillage.html
+++ b/WebContent/crm/dynamicData_tinyvillage.html
@@ -205,7 +205,7 @@
 	                      <th width="10%">小区编号</th>
 	                      <th width="6%">小区居民户数</th>
 	                      <th width="8%">小区面积</th>
-	                      <th width="6%">已消费人数</th>
+	                      <!-- <th width="6%">已消费人数</th> -->
 	                      <th width="4%">小区地图</th>
 	                      <th width="4%">删除标签</th>
 	                      <th width="10%">所属门店</th>
@@ -587,7 +587,7 @@
 		                       +"<td>"+jData[i].tinyvillage_code+"</td>"
 		                       +"<td>"+jData[i].residents_number+"</td>"
 		                       +"<td>"+jData[i].vallage_area+"</td>"
-		                       +"<td>"+jData[i].consumer_number+"</td>"
+		                      /*  +"<td>"+jData[i].consumer_number+"</td>" */
 		                       +"<td>"+mm+"</td>"
 		                       +"<td>"+jData[i].dellable+"</td>"
 		                       +"<td>"+jData[i].store_name+"</td>"
