修改角色组

--- a/WebContent/hr/reg_online_human_list.html
+++ b/WebContent/hr/reg_online_human_list.html
@@ -319,7 +319,7 @@
                         <td >
                            	<select id="groupname" style="width: 100%;display:inline-block;padding:0;" class="form-control">
                            		<option>请选择..</option>
-                           		<option value="ZBCSGLB">总部-城市管理部</option>
+                           		<option value="ZBYYGLB">总部-运营管理部</option>
                            		<option value="ZBCPGLB">总部-产品管理部</option>
                            	</select>
                         </td>
