事业群绩效日期选择

--- a/WebContent/crm/dynamicData_department_consumer.html
+++ b/WebContent/crm/dynamicData_department_consumer.html
@@ -302,7 +302,7 @@ var endDay = year + "-" + month ;//这个月的第一天
 		btns: ['confirm','now'],
 		theme: '#11214e',
 		min: firstDay+"-01",
-		max:firstDay+"-01"
+		max:endDay
 		
 	});
 	var cityId = decode64(getUrlParamByKey("c"));//城市ID
