--- a/WebContent/crm/dynamicData_department_gmv.html
+++ b/WebContent/crm/dynamicData_department_gmv.html
@@ -307,7 +307,7 @@ var endDay = year + "-" + month ;//这个月的第一天
 		btns: ['confirm','now'],
 		theme: '#11214e',
 		min: firstDay+"-01",
-		max:endDay+"-01"
+		max:endDay
 		
 	});
 	var cityId = decode64(getUrlParamByKey("c"));//城市ID
